fix intellij